--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.7.55/css/materialdesignicons.min.css">
   <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"/>-->
   <link rel="shortcut icon" href="./favicon.ico"> 
-  <title>Chronux documentation</title>
+  <title>ChronoLite documentation</title>
 </head>
 <body>
   <div data-app id="main">Please wait...</div>
   <script>
     window.$docsify = {
       el: "#main",
-      // repo: 'https://github.com/chronoscan-capture/chronux-docs.git',
-      name: 'Chronux/docsify',
+      // repo: 'https://github.com/chronoscan-capture/ChronoLite-docs.git',
+      name: 'ChronoLite/docsify',
       logo: './images/clock_forward_40.png',
       themeColor: '#4d90fe',// Chronoscan blue,
       loadSidebar: true,
