--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
       text-transform: uppercase;
       font-size: smaller;
     }
+    .img_bordered {
+      border: 1px solid grey;
+    }
   </style>
 </body>
 </html>
