--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     window.$docsify = {
       el: "#main",
       // repo: 'https://github.com/chronoscan-capture/ChronoLite-docs.git',
-      name: 'ChronoLite/docsify',
-      logo: './images/clock_forward_40.png',
+      name: '<span><img src="./images/clock_forward_40.png" style="margin-bottom: -10px" /></span> <span>ChronoLite</span><br /> <small style="font-size: 13px;">by &copy;ChronoScan Capture</small>',
+      // logo: './images/clock_forward_40.png',
       themeColor: '#4d90fe',// Chronoscan blue,
       loadSidebar: true,
       alias: {
