--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
   <!--<script src="//unpkg.com/docsify-material-icons/dist/docsify-material-icons.min.js"></script>-->
   
   <style>
+    img[src*="#bordered"] {
+        border: 1px solid #f1f1f1;
+    }
     /* arrow sidebar style */
     .sidebar-nav li {
       position: relative;
