nu addition to about and contact

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <body>
   <div data-app id="main">Please wait...</div>
   <script>
+    // Chronoscan Capture
+    // jr>reymad@nov2020
     window.$docsify = {
       el: "#main",
       // repo: 'https://github.com/chronoscan-capture/ChronoLite-docs.git',
