--- a/index.html
+++ b/index.html
@@ -184,5 +184,9 @@
       border: 1px solid grey;
     }
   </style>
+  <script>
+    console.log(new Date().getFullYear()  + ' - reymad@ChronoScanCapture')
+    console.log("-------------------------------")
+  </script>
 </body>
 </html>
