added zoom image plugin

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
   <script src="//unpkg.com/docsify-sidebar-collapse/dist/docsify-sidebar-collapse.min.js"></script>
   <!--https://www.npmjs.com/package/docsify-material-icons-->
   <!--<script src="//unpkg.com/docsify-material-icons/dist/docsify-material-icons.min.js"></script>-->
+  <!--zoom image-->
+  <script src="//unpkg.com/docsify/lib/plugins/zoom-image.min.js"></script>
   
   <style>
     img[src*="#bordered"] {
