nu commit release notes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       alias: {
         '/.*/_sidebar.md': '/_sidebar.md'
       },
-      search: 'auto', // default
+      // search: 'auto', // default
       // complete configuration parameters
       search: {
         maxAge: 0, //  86400000, // Expiration time, the default one day
