new release notes and new thumbs viewer docs

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
     }
     /**/
     /* Mine */
+    .text-center {
+      text-align: center;
+    }
+    .centered {
+      margin: 0 auto !important;
+    }
     .beta_chip {
       margin-left: 4px; color: #ff4081;
       border: 1px solid #ff4081;
