--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!--https://dev.materialdesignicons.com/getting-started/webfont-->
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.7.55/css/materialdesignicons.min.css">
   <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"/>-->
-  <link rel="shortcut icon" href="./favicon.ico"> 
+  <link rel="shortcut icon" href="./favicon.ico?d=20210412"> 
   <title>ChronoLite documentation</title>
 </head>
 <body>
