--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     gtag('config', 'G-FPWE9GB36D');
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
